@@ -20,6 +20,8 @@ bugfixes:
 - don't make a time-costly port scan on disconnecting from SIX or pump driver
 - when appending sensor data assure that its channel names are used
 - stop running action when connection to pump driver is lost
+- assure that definition file cannot be changed when action with calibration is
+  running
 
 
 from version 0.999.1 to 1.0.0
